connected with algo